# ROS_sergeev

module_1/ex01/: commands.txt
module_2/ex01/: .bashrc
module_2/ex03/my_login_package/: CMakeLists.txt  package.xml
module_2/ex04/: colcon_build.txt
module_2/ex05/: rosnode_info.txt
module_2/ex08/: rqt_console.csv  three_turtles.launch
module_2/ex09/my_full_name_interfaces/: CMakeLists.txt  package.xml
module_2/ex10/src/text_to_cmd_vel/: CMakeLists.txt  package.xml  setup.py
module_2/ex10/src/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel.py
module_3/ex01/src/service_full_name/: CMakeLists.txt  package.xml
module_3/ex01/src/service_full_name/src/: client_name.cpp  service_name.cpp
module_3/ex01/src/service_full_name/srv/: SummFullName.srv
module_3/ex02/turtle_cmd_vel/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
module_3/ex03/: doctor.txt
module_3/ex04/src/move_to_goal/: package.xml  setup.py
module_3/ex04/src/move_to_goal/move_to_goal/: move_to_goal_node.py
module_3/ex05/src/action_cleaning_robot/: CMakeLists.txt  package.xml  setup.py
module_3/ex05/src/action_cleaning_robot/action/: CleaningTask.action
module_3/ex05/src/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
module_4/ex01/: frames_2025-10-18_14.01.35.gv  last_transform.txt  transform.txt
module_4/ex02/: carrot.rviz
module_4/ex02/src/carrot_follower/: package.xml  setup.py
module_4/ex02/src/carrot_follower/carrot_follower/: carrot_tf2_broadcaster.py  turtle1_tf2_broadcaster.py  turtle2_carrot_follower.py  turtle2_tf2_broadcaster.py
module_4/ex02/src/carrot_follower/launch/: carrot_demo.launch.py
module_4/ex02b/src/turtle_multi_target/: package.xml  setup.py
module_4/ex02b/src/turtle_multi_target/launch/: multi_target_demo.launch.py
module_4/ex02b/src/turtle_multi_target/turtle_multi_target/: target_switcher.py  turtle1_tf2_broadcaster.py  turtle2_tf2_broadcaster.py  turtle3_tf2_broadcaster.py  turtle_controller.py
module_4/ex03/src/time_delayed_turtle/: package.xml  setup.cfg  setup.py
module_4/ex03/src/time_delayed_turtle/launch/: time_delay_demo.launch.py
module_4/ex03/src/time_delayed_turtle/time_delayed_turtle/: delayed_tf2_broadcaster.py  turtle1_tf2_broadcaster.py  turtle2_tf2_broadcaster.py  turtle2_time_follower.py
module_5/ex01/: robot.urdf  robot_display.launch.py
module_5/ex02/: robot.urdf.xacro  robot_display.launch.py
module_5/ex03/: empty.world  robot.gazebo.xacro  robot.urdf.xacro  robot_gazebo.launch.py
module_5/ex03/src/diff_drive_bringup/: CMakeLists.txt  package.xml
module_5/ex03/src/diff_drive_bringup/config/: diff.drive.rviz  robot_bridge.yaml
module_5/ex03/src/diff_drive_bringup/launch/: diff_drive.launch.py
module_5/ex03/src/diff_drive_description/: CMakeLists.txt  package.xml
module_5/ex03/src/diff_drive_description/urdf/: gazebo.urdf.xacro  robot.urdf.xacro
module_5/ex04/src/circle_movement/: package.xml  setup.cfg  setup.py
module_5/ex04/src/circle_movement/circle_movement/: circle_movement.py
module_5/ex04/src/circle_movement/launch/: circle_movement.launch.py
module_5/ex05/src/cool_movement/: package.xml  setup.cfg  setup.py
module_5/ex05/src/cool_movement/cool_movement/: sinusoid_movement.py
module_5/ex05/src/cool_movement/launch/: cool_movement.launch.py
module_6/ex_01/src/robot_description/urdf/: robot.urdf.xacro
module_6/ex_02/src/robot_description/urdf/: robot.urdf.xacro
module_6/ex_03/src/robot_description/urdf/: robot.urdf.xacro
