<?xml version="1.0"?>
<package format="3">
  <name>text_to_cmd_vel</name>
  <version>0.0.0</version>
  <description>Convert text commands to geometry_msgs/Twist for turtlesim</description>

  <maintainer email="enderser4@gmail.com">Sergeev Egor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
