<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_cleaning_robot</name>
  <version>0.0.0</version>
  <description>Cleaning robot action server and client</description>
  <maintainer email="enderser4@gmail.com">Egor</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>unique_identifier_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>