<?xml version="1.0"?>
<package format="3">
  <name>circle_movement</name>
  <version>0.0.0</version>
  <description>Package to make robot move in circle via /cmd_vel</description>
  <maintainer email="enderser4@gmail.com">root</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>diff_drive_bringup</exec_depend>  <!-- Для include launch -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>