<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cool_movement</name>
  <version>0.0.1</version>
  <description>Unique movement node for cool robot (ex05)</description>
  <maintainer email="enderser4@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>diff_drive_description</exec_depend>
  <exec_depend>diff_drive_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
